--- a/fcc_sms_text_classification_ml.ipynb
+++ b/fcc_sms_text_classification_ml.ipynb
@@ -1014,7 +1014,7 @@
       "display_name": "Python 3",
       "name": "python3"
     },
-    "language_info": {},
+    "language_info": {"name":"python"},
     "accelerator": "GPU",
     "gpuClass": "standard"
   },
